<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComicActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTitle"
                android:text="@string/comic_view_title_label" />

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/editSubTitle"
                android:text="@string/comic_view_subtitle_label" />

            <EditText
                android:id="@+id/editSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/editAuthor"
                android:text="@string/comic_view_author_label" />

            <EditText
                android:id="@+id/editAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/editPublisher"
                android:text="@string/comic_view_publisher_label" />

            <EditText
                android:id="@+id/editPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/editYear"
                android:text="@string/comic_view_year_label" />

            <EditText
                android:id="@+id/editYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/editEdition"
                android:text="@string/comic_view_edition_label" />

            <EditText
                android:id="@+id/editEdition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/editPrinting"
                android:text="@string/comic_view_printing_label" />

            <EditText
                android:id="@+id/editPrinting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/editCountry"
                android:text="@string/comic_view_country_label" />

            <EditText
                android:id="@+id/editCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/editBinding"
                android:text="@string/comic_view_binding_label" />

            <EditText
                android:id="@+id/editBinding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/editISBN"
                android:text="@string/comic_view_isbn_label" />

            <EditText
                android:id="@+id/editISBN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveComicButton"
        style="@style/floating_action_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_save" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>